--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <img src="template.PNG"> -->
+    <div>
+        <h1>Sly Golds</h1>
+        <h3>Episode Races</h3>
+        <div>
+            <div>
+                <ul>
+                    <h2>G2 Esports</h2>
+                    <li>Bvr</li>
+                    <li>Gandy</li>
+                    <li>Stevens</li>
+
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h2>Cloud9 Espots</h2>
+                    <li>notBvr</li>
+                    <li>notGandy</li>
+                    <li>notStevens</li>
+
+                </ul>
+            </div>
+
+        </div>
+        <div>
+            <!-- images -->
+            <img src="episode1.png">
+             
+        </div>
+    </div>
 </body>
 </html>
