implemented new episode images

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             </div>
 
         </div>
-        <div>
+        <div class="epImages">
             <!-- images -->
-            <img id="yourElement" src="episode1.png">
-            <img src="episode1.png">
-            <img src="episode1.png">
-            <img src="episode1.png">
-            <img src="episode1.png">
-            <img src="episode1.png">
-            <img src="episode1.png">
-            <img src="episode1.png">
+            <img id="yourElement" src="images/episode panels/ep1.png">
+            <img src="images/episode panels/ep2.png">
+            <img src="images/episode panels/ep3.png">
+            <img src="images/episode panels/ep4.png">
+            <img src="images/episode panels/ep5.png">
+            <img src="images/episode panels/ep6.png">
+            <img src="images/episode panels/ep7.png">
+            <img src="images/episode panels/ep8.png">
         </div>
     </div>
     <br><br><br><br>
